fix: fixed the spacing of qoute author

--- a/style.css
+++ b/style.css
@@ -94,9 +94,16 @@ figcaption{
     text-align: center;
     background-color: #E5E7EB;
     margin: 0px;
-    padding: 5px 0 10px 0;
+    padding-top: 10px;
 }
-
+#qoute{
+    padding: 0;
+    margin: 0;
+}
+#qoute_author{
+    display: flex;
+    justify-content: space-around;
+}
 #cta_container{
     display: flex;
     justify-content: space-around;
